# STL

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .mailmap  .npmrc  .prettierignore  .prettierrc.json  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CONTRIBUTING.md  GitExtensions.settings  LICENSE.txt  NOTICE.txt  README.md  SECURITY.md  STL  azure-pipelines-docker-mshosted.yml  azure-pipelines-docker-selfhosted.yml  azure-pipelines.yml  benchmark-random_integer_generation-results.csv  cgmanifest.json  daily_table.js  extra_long_lines.md  format.diff  gather_stats.js  index.html  lf_line_endings.md  monthly_table.js  non_ascii_characters.md  package-lock.json  package.json  query_prs_and_issues.graphql  query_total_counts.graphql  status_chart.js  tabs.md  tsconfig.json  tsconfig.universal.json  usernames_contributors.txt  (+5 more)
benchmarks/: CMakeLists.txt
benchmarks/inc/: alloc.hpp  lorem.hpp  skewed_allocator.hpp  udt.hpp  utility.hpp  xoshiro.hpp
benchmarks/src/: adjacent_difference.cpp  adjacent_find.cpp  any_swap.cpp  bitset_from_string.cpp  bitset_to_string.cpp  charconv_floats.cpp  copy.cpp  efficient_nonlocking_print.cpp  filesystem.cpp  fill.cpp  find_and_count.cpp  find_first_of.cpp  flat_meow_assign.cpp  has_single_bit.cpp  includes.cpp  integer_to_string.cpp  iota.cpp  is_sorted_until.cpp  locale_classic.cpp  locate_zone.cpp  minmax_element.cpp  mismatch.cpp  move_only_function.cpp  nth_element.cpp  path_lexically_normal.cpp  print.cpp  priority_queue_push_range.cpp  random_integer_generation.cpp  ranges_div_ceil.cpp  regex_match.cpp  regex_search.cpp  remove.cpp  replace.cpp  reverse.cpp  rotate.cpp  sample.cpp  search.cpp  search_n.cpp  shuffle.cpp  stacktrace_current.cpp  (+13 more)
benchmarks/std/: main.cpp
stl/: CMakeLists.txt  STL.natvis  set_environment.bat.in  set_environment.ps1.in
stl/aliases/: generate.cmd  std_init_once_begin_initialize-arm64ec.txt  std_init_once_complete-arm64ec.txt
stl/debugger/: STL.natvis
stl/inc/: __msvc_all_public_headers.hpp  __msvc_bit_utils.hpp  __msvc_chrono.hpp  __msvc_cxx_stdatomic.hpp  __msvc_doom_core.hpp  __msvc_filebuf.hpp  __msvc_format_ucd_tables.hpp  __msvc_formatter.hpp  __msvc_heap_algorithms.hpp  __msvc_int128.hpp  __msvc_iter_core.hpp  __msvc_minmax.hpp  __msvc_ostream.hpp  __msvc_print.hpp  __msvc_random_ziggurat_tables.hpp  __msvc_ranges_to.hpp  __msvc_ranges_tuple_formatter.hpp  __msvc_sanitizer_annotate_container.hpp  __msvc_string_view.hpp  __msvc_system_error_abi.hpp  __msvc_threads_core.hpp  __msvc_transform_view_to.hpp  __msvc_tzdb.hpp  __msvc_unicode_iterators.hpp  __msvc_xlocinfo_types.hpp  algorithm  any  array  atomic  barrier  bit  bitset  cassert  ccomplex  cctype  cerrno  cfenv  cfloat  charconv  chrono  (+149 more)
stl/inc/.cph/: .tempCodeRunnerFile.cpp_c5522050eb640260b504c8402c6d8f0f.prob
stl/inc/cvt/: 8859_1  8859_10  8859_13  8859_14  8859_15  8859_16  8859_2  8859_3  8859_4  8859_5  8859_6  8859_7  8859_8  8859_9  baltic  big5  cp037  cp1006  cp1026  cp1250  cp1251  cp1252  cp1253  cp1254  cp1255  cp1256  cp1257  cp1258  cp424  cp437  cp500  cp737  cp775  cp850  cp852  cp855  cp856  cp857  cp860  cp861  (+38 more)
stl/inc/experimental/: algorithm  coroutine  deque  filesystem  forward_list  generator  list  map  random  resumable  set  string  unordered_map  unordered_set  vector  xutility
stl/modules/: modules.json  std.compat.ixx  std.ixx
stl/src/: StlCompareStringA.cpp  StlCompareStringW.cpp  StlLCMapStringA.cpp  StlLCMapStringW.cpp  _tolower.cpp  _toupper.cpp  alias.asm  alias_init_once_begin_initialize.asm  alias_init_once_complete.asm  asan.cpp  asan_noop.cpp  atomic.cpp  atomic_ref.cpp  atomic_wait.cpp  awint.h  awint.hpp  cerr.cpp  charconv.cpp  cin.cpp  clog.cpp  cond.cpp  coroutine.cpp  cout.cpp  cthread.cpp  dllmain.cpp  dllmain_satellite.cpp  excptptr.cpp  filesys.cpp  filesystem.cpp  filesystem_space.cpp  fiopen.cpp  float_multi_prec.hpp  format.cpp  future.cpp  import_library.txt  init_locks.hpp  instances.cpp  iomanip.cpp  ios.cpp  iosptrs.cpp  (+152 more)
stl/xmldocs/: array.xml  atomic.xml  bitset.xml  chrono.xml  cmath.xml  complex.xml  condition_variable.xml  cstddef.xml  cstdio.xml  cstdlib.xml  cwchar.xml  deque.xml  exception.xml  forward_list.xml  fstream.xml  functional.xml  future.xml  initializer_list.xml  ios.xml  iosfwd.xml  iostream.xml  istream.xml  iterator.xml  limits.xml  list.xml  locale.xml  map.xml  memory.xml  mutex.xml  new.xml  ostream.xml  queue.xml  random.xml  ratio.xml  regex.xml  scoped_allocator.xml  set.xml  shared_mutex.xml  sstream.xml  stack.xml  (+14 more)
tests/: CMakeLists.txt  universal_prefix.lst
tests/libcxx/: CMakeLists.txt  contest.yaml  expected_failures.txt  expected_results.txt  lit.cfg  lit.site.cfg  lit.site.cfg.in  magic_comments.txt  skipped_tests.txt  test_type_overrides.txt  usual_matrix.lst
tests/std/: CMakeLists.txt  expected_results.txt  lit.cfg  lit.site.cfg.in  run.pl  runbe.pl  test.lst
tests/tr1/: CMakeLists.txt  README.md  env.lst  env_minus_md_idl.lst  env_minus_pure.lst  env_single.lst  env_threads.lst  expected_results.txt  lit.cfg  lit.site.cfg.in  prefix.lst  run.pl  runbe.pl  test.lst
tools/: CMakeLists.txt  CMakeSettings.json  count_libcxx.py
tools/format/: CMakeLists.txt
tools/inc/: stljobs.h
tools/jobify/: CMakeLists.txt  jobify.cpp
tools/move_only_function_specializations/: move_only_function_specializations.py
tools/parallelize/: CMakeLists.txt  parallelize.cpp
tools/scripts/: charconv_generate.cpp  charconv_tables_generate.cpp  check_libcxx_paths.py  check_test_lst_paths.py  format_width_intervals_generate.cpp  move_only_function_specializations.py  print_failures.py  random_ziggurat_tables_generate.cpp  transform_llvm.sh
tools/unicode_properties_parse/: .gitignore  CMakeLists.txt  download_unicode_data_files.py  emoji-data.txt  format_width_estimate_intervals.cpp  format_width_estimate_intervals.py  grapheme_break_property_data_gen.py  grapheme_break_test_data_gen.py  unicode_properties_data_gen.py  unicode_properties_parse.cpp
tools/validate/: CMakeLists.txt  validate.cpp
tools/vscode/: stl.code-workspace
(+1816 files in other folders)
